--- a/src/base.css
+++ b/src/base.css
@@ -7,3 +7,40 @@ body {
 .side-panel-chart {
     height: 500px;
 }
+
+.circle {
+    border-radius: 50%;
+    width: 10px;
+    height: 10px;
+    background-color: #3ea5f1;
+    margin-right: 4px;
+}
+
+.marker {
+    border-radius: 2px;
+    box-shadow: 0px 1px 4px -1px rgba(0, 0, 0, 0.3);
+    background: #fff;
+    padding: 5px 7px;
+    font-size: 14px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+.tweet-writer {
+    font-weight: bold;
+}
+
+.tweet {
+    border-bottom: 1px solid #bce8f1;
+    padding-bottom: 8px;
+    padding-top: 8px;
+}
+
+.tweet:first-child {
+    padding-top: 0;
+}
+
+.tweet:last-child {
+    border: 0;
+}
